[project]
name = "shepard"
version = "1.0.1"
authors = [
  { name="Shepard Team", email="shepard_dev_group@googlegroups.com" },
]
description = "Automating the creation of batch processing workflows in AWS!"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
  'click==8.1.3',
  'boto3==1.26.89',
  'awscli==1.27.89',
  'validators==0.20.0',
  'aws-cdk-lib==2.68.0',
  'constructs==10.1.275'
]

[project.urls]
"Homepage" = "https://github.com/Jmevorach/New-Shepard"
"Bug Tracker" = "https://github.com/Jmevorach/New-Shepard/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
shepard = "shepard.cli:run"